--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,177 @@
+@article{Casson2017,
+abstract = {Tail-anchored (TA) proteins are transmembrane proteins with a single C-terminal transmembrane domain, which functions as both their subcellular targeting signal and membrane anchor. We show that knockout of TRC40 in cultured human cells has a relatively minor effect on endogenous TA proteins, despite their apparent reliance on this pathway in vitro These findings support recent evidence that the canonical TRC40 pathway is not essential for TA protein biogenesis in vivo We therefore investigated the possibility that other ER-targeting routes can complement the TRC40 pathway and identified roles for both the SRP pathway and the recently described mammalian SND pathway in TA protein biogenesis. We conclude that, although TRC40 normally plays an important role in TA protein biogenesis, it is not essential, and speculate that alternative pathways for TA protein biogenesis, including those identified in this study, contribute to the redundancy of the TRC40 pathway.},
+author = {Casson, Joseph and McKenna, Michael and Ha{\ss}denteufel, Sarah and Aviram, Naama and Zimmerman, Richard and High, Stephen},
+doi = {10.1242/jcs.207829},
+file = {::},
+issn = {1477-9137},
+journal = {Journal of cell science},
+keywords = {Endoplasmic reticulum,Membrane protein,Protein translocation,SND,SRP},
+month = {nov},
+number = {22},
+pages = {3851--3861},
+pmid = {29021347},
+publisher = {The Company of Biologists Ltd},
+title = {{Multiple pathways facilitate the biogenesis of mammalian tail-anchored proteins.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/29021347 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC5702047},
+volume = {130},
+year = {2017}
+}
+@article{Haßdenteufel2017,
+abstract = {Recently, understanding of protein targeting to the endoplasmic reticulum (ER) was expanded by discovery of multiple pathways that function in parallel to the signal recognition particle (SRP). GET (guided entry of tail-anchored proteins) and SND (SRP independent) are two such targeting pathways described in yeast. So far, no human SND component is functionally characterized. Here, we report hSnd2 as the first constituent of the human SND pathway able to support substrate-specific protein targeting to the ER. Similar to its yeast counterpart, hSnd2 is assumed to function as a membrane-bound receptor preferentially targeting precursors carrying C-terminal transmembrane domains. Our genetic and physical interaction studies show that hSnd2 is part of a complex network of targeting and translocation that is dynamically regulated. This article is protected by copyright. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:physics/0608246v3},
+author = {Ha{\ss}denteufel, Sarah and Sicking, Mark and Schorr, Stefan and Aviram, Naama and Fecher-Trost, Claudia and Schuldiner, Maya and Jung, Martin and Zimmermann, Richard and Lang, Sven},
+doi = {10.1002/1873-3468.12831},
+eprint = {0608246v3},
+file = {::},
+isbn = {4955139574},
+issn = {18733468},
+journal = {FEBS Letters},
+keywords = {HSND2,SRP independent,endoplasmic reticulum,protein targeting,signal recognition particle,transmembrane recognition complex},
+month = {oct},
+number = {20},
+pages = {3211--3224},
+pmid = {28862756},
+primaryClass = {arXiv:physics},
+publisher = {Wiley-Blackwell},
+title = {{hSnd2 protein represents an alternative targeting factor to the endoplasmic reticulum in human cells}},
+url = {http://doi.wiley.com/10.1002/1873-3468.12831},
+volume = {591},
+year = {2017}
+}
+@article{Qin2011,
+abstract = {Zn(2+) plays essential roles in biology, and cells have adopted exquisite mechanisms for regulating steady-state Zn(2+) levels. Although much is known about total Zn(2+) in cells, very little is known about its subcellular distribution. Yet defining the location of Zn(2+) and how it changes with signaling events is essential for elucidating how cells regulate this essential ion. Here we create fluorescent sensors genetically targeted to the endoplasmic reticulum (ER) and Golgi to monitor steady-state Zn(2+) levels as well as flux of Zn(2+) into and out of these organelles. These studies reveal that ER and Golgi contain a concentration of free Zn(2+) that is 100 times lower than the cytosol. Both organelles take up Zn(2+) when cytosolic levels are elevated, suggesting that the ER and Golgi can sequester elevated cytosolic Zn(2+) and thus have the potential to play a role in influencing Zn(2+) toxicity. ER Zn(2+) homeostasis is perturbed by small molecule antagonists of Ca(2+) homeostasis and ER Zn(2+) is released upon elevation of cytosolic Ca(2+) pointing to potential exchange of these two ions across the ER. This study provides direct evidence that Ca(2+) signaling can influence Zn(2+) homeostasis and vice versa, that Zn(2+) dynamics may modulate Ca(2+) signaling.},
+author = {Qin, Y. and Dittmer, P. J. and Park, J. G. and Jansen, K. B. and Palmer, A. E.},
+doi = {10.1073/pnas.1015686108},
+file = {::},
+isbn = {1091-6490 (Electronic)$\backslash$r0027-8424 (Linking)},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+month = {may},
+number = {18},
+pages = {7351--7356},
+pmid = {21502528},
+publisher = {National Academy of Sciences},
+title = {{Measuring steady-state and dynamic endoplasmic reticulum and Golgi Zn2+ with genetically encoded sensors}},
+url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1015686108},
+volume = {108},
+year = {2011}
+}
+@article{Schapiro2000,
+abstract = {The factors contributing to the establishment of the steady state Golgi pH (pH(G)) were studied in intact and permeabilized mammalian cells by fluorescence ratio imaging. Retrograde transport of the nontoxic B subunit of verotoxin 1 was used to deliver pH-sensitive probes to the Golgi complex. To evaluate whether counter-ion permeability limited the activity of the electrogenic V-ATPase, we determined the concentration of K(+) in the lumen of the Golgi using a null point titration method. The [K(+)] inside the Golgi was found to be close to that of the cytosol, and increasing its permeability had no effect on pH(G). Moreover, the capacity of the endogenous counter-ion permeability exceeded the rate of H(+) pumping, implying that the potential across the Golgi membrane is negligible and has little influence on pH(G). The V-ATPase does not reach thermodynamic equilibrium nor does it seem to be allosterically inactivated at the steady state pH(G). In fact, active H(+) pumping was detectable even below the resting pH(G). A steady state pH was attained when the rate of pumping was matched by the passive backflux of H(+) (equivalents) or "leak." The nature of this leak pathway was investigated in detail. Neither vesicular traffic nor H(+)/cation antiporters or symporters were found to contribute to the net loss of H(+) from the Golgi. Instead, the leak was sensitive to voltage changes and was inhibited by Zn(2+), resembling the H(+) conductive pathway of the plasma membrane. We conclude that a balance between an endogenous leak, which includes a conductive component, and the H(+) pump determines the pH at which the Golgi lumen attains a steady state.},
+author = {Schapiro, Florencia B. and Grinstein, Sergio},
+doi = {10.1074/jbc.M002386200},
+issn = {0021-9258},
+journal = {Journal of Biological Chemistry},
+month = {jul},
+number = {28},
+pages = {21025--21032},
+pmid = {10748071},
+title = {{Determinants of the pH of the Golgi Complex}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/10748071 http://www.jbc.org/lookup/doi/10.1074/jbc.M002386200},
+volume = {275},
+year = {2000}
+}
+@article{Perry2011,
+abstract = {Fluorescent probes for monitoring mitochondrial membrane potential are frequently used for assessing mitochondrial function, particularly in the context of cell fate determination in biological and biomedical research. However, valid interpretation of results obtained with such probes requires careful consideration of numerous controls, as well as possible effects of non-protonic charges on dye behavior. In this context, we provide an overview of some of the important technical considerations, controls, and parallel complementary assays that can be employed to help ensure appropriate interpretation of results, thus providing a practical usage guide for monitoring mitochondrial membrane potentials with cationic probes. In total, this review will help illustrate both the strengths and potential pitfalls of common mitochondrial membrane potential dyes, and highlight best-usage approaches for their efficacious application in life sciences research.},
+author = {Perry, Seth W and Norman, John P and Barbieri, Justin and Brown, Edward B and Gelbard, Harris A},
+doi = {10.2144/000113610},
+file = {::},
+issn = {1940-9818},
+journal = {BioTechniques},
+month = {feb},
+number = {2},
+pages = {98--115},
+pmid = {21486251},
+publisher = {NIH Public Access},
+title = {{Mitochondrial membrane potential probes and the proton gradient: a practical usage guide.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/21486251 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC3115691},
+volume = {50},
+year = {2011}
+}
+@article{Shurtleff2018,
+abstract = {{\textless}p{\textgreater}The endoplasmic reticulum (ER) supports biosynthesis of proteins with diverse transmembrane domain (TMD) lengths and hydrophobicity. Features in transmembrane domains such as charged residues in ion channels are often functionally important, but could pose a challenge during cotranslational membrane insertion and folding. Our systematic proteomic approaches in both yeast and human cells revealed that the ER membrane protein complex (EMC) binds to and promotes the biogenesis of a range of multipass transmembrane proteins, with a particular enrichment for transporters. Proximity-specific ribosome profiling demonstrates that the EMC engages clients cotranslationally and immediately following clusters of TMDs enriched for charged residues. The EMC can remain associated after completion of translation, which both protects clients from premature degradation and allows recruitment of substrate-specific and general chaperones. Thus, the EMC broadly enables the biogenesis of multipass transmembrane proteins containing destabilizing features, thereby mitigating the trade-off between function and stability.{\textless}/p{\textgreater}},
+author = {Shurtleff, Matthew J and Itzhak, Daniel N and Hussmann, Jeffrey A and {Schirle Oakdale}, Nicole T and Costa, Elizabeth A and Jonikas, Martin and Weibezahn, Jimena and Popova, Katerina D and Jan, Calvin H and Sinitcyn, Pavel and Vembar, Shruthi S and Hernandez, Hilda and Cox, J{\"{u}}rgen and Burlingame, Alma L and Brodsky, Jeffrey and Frost, Adam and Borner, Georg HH and Weissman, Jonathan S},
+doi = {10.7554/eLife.37018},
+file = {::},
+issn = {2050-084X},
+journal = {eLife},
+pages = {e37018},
+pmid = {29809151},
+title = {{The ER membrane protein complex interacts cotranslationally to enable biogenesis of multipass membrane proteins}},
+url = {https://elifesciences.org/articles/37018},
+volume = {7},
+year = {2018}
+}
+@article{Lynch2017,
+abstract = {{\textless}p{\textgreater}The evolution of the eukaryotic cell marked a profound moment in Earth's history, with most of the visible biota coming to rely on intracellular membrane-bound organelles. It has been suggested that this evolutionary transition was critically dependent on the movement of ATP synthesis from the cell surface to mitochondrial membranes and the resultant boost to the energetic capacity of eukaryotic cells. However, contrary to this hypothesis, numerous lines of evidence suggest that eukaryotes are no more bioenergetically efficient than prokaryotes. Thus, although the origin of the mitochondrion was a key event in evolutionary history, there is no reason to think membrane bioenergetics played a direct, causal role in the transition from prokaryotes to eukaryotes and the subsequent explosive diversification of cellular and organismal complexity.{\textless}/p{\textgreater}},
+author = {Lynch, Michael and Marinov, Georgi K.},
+doi = {10.7554/eLife.20437},
+file = {::},
+isbn = {2050-084X (Electronic)
+2050-084X (Linking)},
+issn = {2050084X},
+journal = {eLife},
+pages = {1--30},
+pmid = {28300533},
+title = {{Membranes, energetics, and evolution across the prokaryote-eukaryote divide}},
+volume = {6},
+year = {2017}
+}
+@article{FigueiredoCosta2018,
+abstract = {Tail-anchored (TA) proteins insert into their target organelles by incompletely elucidated posttranslational pathways. Some TA proteins spontaneously insert into protein-free liposomes, yet target a specific organelle in vivo. Two spontaneously inserting cytochrome b5 forms, b5-ER and b5-RR, which differ only in the charge of the C-terminal region, target the endoplasmic reticulum (ER) or the mitochondrial outer membrane (MOM), respectively. To bridge the gap between the cell-free and in cellula results, we analyzed targeting in digitonin-permeabilized adherent HeLa cells. In the absence of cytosol, the MOM was the destination of both b5 forms, whereas in cytosol the C-terminal negative charge of b5-ER determined targeting to the ER. Inhibition of the transmembrane recognition complex (TRC) pathway only partially reduced b5 targeting, while strongly affecting the classical TRC substrate synaptobrevin 2 (Syb2). To identify additional pathways, we tested a number of small inhibitors, and found that Eeyarestatin I (ESI) reduced insertion of b5-ER and of another spontaneously inserting TA protein, while not affecting Syb2. The effect was independent from the known targets of ESI, Sec61 and p97/VCP. Our results demonstrate that the MOM is the preferred destination of spontaneously inserting TA proteins, regardless of their C-terminal charge, and reveal a novel, substrate-specific ER-targeting pathway.},
+author = {{Figueiredo Costa}, Bruna and Cassella, Patrizia and Colombo, Sara F. and Borgese, Nica},
+doi = {10.1111/tra.12550},
+file = {::},
+issn = {16000854},
+journal = {Traffic},
+keywords = {Eeyarestatin I,TRC40,cytochrome b5,protein targeting,semi-permeabilized cells,unassisted integration},
+number = {3},
+pages = {182--197},
+pmid = {29359838},
+title = {{Discrimination between the endoplasmic reticulum and mitochondria by spontaneously inserting tail-anchored proteins}},
+volume = {19},
+year = {2018}
+}
+@article{Qin2016,
+abstract = {LITAF (LPS-induced TNF-activating factor) is an endosome-associated integral membrane protein important for multivesicular body sorting. Several mutations in LITAF cause autosomal-dominant Charcot Marie Tooth disease type 1C. These mutations map to a highly conserved C-terminal region, termed the LITAF domain, which includes a 22 residue hydrophobic sequence and flanking cysteine-rich regions that contain peptide motifs found in zinc fingers. Although the LITAF domain is thought to be responsible for membrane integration, the membrane topology of LITAF has not been established. Here, we have investigated whether LITAF is a tail-anchored (TA) membrane-spanning protein or monotopic membrane protein. When translated in vitro, LITAF integrates poorly into ER-derived microsomes compared with Sec61$\beta$, a bona fide TA protein. Furthermore, introduction of N-linked glycosylation reporters shows that neither the N-terminal nor C-terminal domains of LITAF translocate into the ER lumen. Expression in cells of an LITAF construct containing C-terminal glycosylation sites confirms that LITAF is not a TA protein in cells. Finally, an immunofluorescence-based latency assay showed that both the N- and C-termini of LITAF are exposed to the cytoplasm. Recombinant LITAF contains 1 mol/mol zinc, while mutation of predicted zinc-binding residues disrupts LITAF membrane association. Hence, we conclude that LITAF is a monotopic membrane protein whose membrane integration is stabilised by a zinc finger. The related human protein, CDIP1 (cell death involved p53 target 1), displays identical membrane topology, suggesting that this mode of membrane integration is conserved in LITAF family proteins.},
+author = {Qin, W. and Wunderley, L. and Barrett, A. L. and High, S. and Woodman, P. G.},
+doi = {10.1042/BCJ20160657},
+file = {::},
+issn = {0264-6021},
+journal = {Biochemical Journal},
+number = {21},
+pages = {3965--3978},
+pmid = {27582497},
+title = {{The Charcot Marie Tooth disease protein LITAF is a zinc-binding monotopic membrane protein}},
+url = {http://biochemj.org/cgi/doi/10.1042/BCJ20160657},
+volume = {473},
+year = {2016}
+}
+@article{Lynch2017a,
+abstract = {{\textless}p{\textgreater}The evolution of the eukaryotic cell marked a profound moment in Earth's history, with most of the visible biota coming to rely on intracellular membrane-bound organelles. It has been suggested that this evolutionary transition was critically dependent on the movement of ATP synthesis from the cell surface to mitochondrial membranes and the resultant boost to the energetic capacity of eukaryotic cells. However, contrary to this hypothesis, numerous lines of evidence suggest that eukaryotes are no more bioenergetically efficient than prokaryotes. Thus, although the origin of the mitochondrion was a key event in evolutionary history, there is no reason to think membrane bioenergetics played a direct, causal role in the transition from prokaryotes to eukaryotes and the subsequent explosive diversification of cellular and organismal complexity.{\textless}/p{\textgreater}},
+author = {Lynch, Michael and Marinov, Georgi K},
+doi = {10.7554/eLife.20437},
+issn = {2050-084X},
+journal = {eLife},
+month = {mar},
+title = {{Membranes, energetics, and evolution across the prokaryote-eukaryote divide}},
+url = {https://elifesciences.org/articles/20437},
+volume = {6},
+year = {2017}
+}
+@article{Lynch2017b,
+abstract = {{\textless}p{\textgreater}The evolution of the eukaryotic cell marked a profound moment in Earth's history, with most of the visible biota coming to rely on intracellular membrane-bound organelles. It has been suggested that this evolutionary transition was critically dependent on the movement of ATP synthesis from the cell surface to mitochondrial membranes and the resultant boost to the energetic capacity of eukaryotic cells. However, contrary to this hypothesis, numerous lines of evidence suggest that eukaryotes are no more bioenergetically efficient than prokaryotes. Thus, although the origin of the mitochondrion was a key event in evolutionary history, there is no reason to think membrane bioenergetics played a direct, causal role in the transition from prokaryotes to eukaryotes and the subsequent explosive diversification of cellular and organismal complexity.{\textless}/p{\textgreater}},
+author = {Lynch, Michael and Marinov, Georgi K},
+doi = {10.7554/eLife.20437},
+issn = {2050-084X},
+journal = {eLife},
+month = {mar},
+title = {{Membranes, energetics, and evolution across the prokaryote-eukaryote divide}},
+url = {https://elifesciences.org/articles/20437},
+volume = {6},
+year = {2017}
+}
 @article{Kurowski2003,
 author = {Kurowski, M. A. and Bujnicki, Janusz M.},
 doi = {10.1093/nar/gkg557},
@@ -3229,16 +3403,21 @@ volume = {159},
 year = {2017}
 }
 @article{Ulmschneider2017,
+abstract = {Hydrophobic amino acids are abundant in transmembrane (TM) helices of membrane proteins. Charged residues are sparse, apparently due to the unfavorable energetic cost of partitioning charges into nonpolar phases. Nevertheless, conserved arginine residues within TM helices regulate vital functions, such as ion channel voltage gating and integrin receptor inactivation. The energetic cost of arginine in various positions along hydrophobic helices has been controversial. Potential of mean force (PMF) calculations from atomistic molecular dynamics simulations predict very large energetic penalties, while in vitro experiments with Sec61 translocons indicate much smaller penalties, even for arginine in the center of hydrophobic TM helices. Resolution of this conflict has proved difficult, because the in vitro assay utilizes the complex Sec61 translocon, while the PMF calculations rely on the choice of simulation system and reaction coordinate. Here we present the results of computational and experimental studies that permit direct comparison with the Sec61 translocon results. We find that the Sec61 translocon mediates less efficient membrane insertion of Arg-containing TM helices compared with our computational and experimental bilayer-insertion results. In the simulations, a combination of arginine snorkeling, bilayer deformation, and peptide tilting is sufficient to lower the penalty of Arg insertion to an extent such that a hydrophobic TM helix with a central Arg residue readily inserts into a model membrane. Less favorable insertion by the translocon may be due to the decreased fluidity of the endoplasmic reticulum (ER) membrane compared with pure palmitoyloleoyl-phosphocholine (POPC). Nevertheless, our results provide an explanation for the differences between PMF- and experiment-based penalties for Arg burial.},
 author = {Ulmschneider, Martin B. and Ulmschneider, Jakob P. and Freites, J. Alfredo and von Heijne, Gunnar and Tobias, Douglas J. and White, Stephen H.},
 doi = {10.1007/s00249-017-1206-x},
-file = {::},
-issn = {0175-7571},
+file = {:home/james/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ulmschneider et al. - 2017 - Transmembrane helices containing a charged arginine are thermodynamically stable(2).pdf:pdf},
+issn = {14321017},
 journal = {European Biophysics Journal},
+keywords = {Arginine,Lipid bilayer membrane,Molecular dynamics,Sec61 translocon,Transfer free energy,Transmembrane helix},
 month = {apr},
-pages = {1--11},
+number = {7},
+pages = {627--637},
+pmid = {28409218},
 publisher = {Springer Berlin Heidelberg},
 title = {{Transmembrane helices containing a charged arginine are thermodynamically stable}},
 url = {http://link.springer.com/10.1007/s00249-017-1206-x},
+volume = {46},
 year = {2017}
 }
 @article{Misch2016,
@@ -5712,19 +5891,6 @@ pmid = {21127848},
 title = {{Arginine in membranes: The connection between molecular dynamics simulations and translocon-mediated insertion experiments}},
 year = {2011}
 }
-@article{Ulmschneider2017,
-author = {Ulmschneider, Martin B. and Ulmschneider, Jakob P. and Freites, J. Alfredo and von Heijne, Gunnar and Tobias, Douglas J. and White, Stephen H.},
-doi = {10.1007/s00249-017-1206-x},
-file = {::},
-issn = {0175-7571},
-journal = {European Biophysics Journal},
-month = {apr},
-pages = {1--11},
-publisher = {Springer Berlin Heidelberg},
-title = {{Transmembrane helices containing a charged arginine are thermodynamically stable}},
-url = {http://link.springer.com/10.1007/s00249-017-1206-x},
-year = {2017}
-}
 @article{Khalid2013,
 abstract = {The time and length scales accessible by biomolecular simulations continue to increase. This is in part due to improvements in algorithms and computing performance, but is also the result of the emergence of coarsegrained (CG) potentials, which complement and extend the information obtainable from fully detailed models. CG methods have already proven successful for a range of applications that benefit from the ability to rapidly simulate spontaneous self-Assembly within a lipid membrane environment, including the insertion and/or oligomerization of a range of "toy models," transmembrane peptides, and single- and multidomain proteins. While these simplified approaches sacrifice atomistic level detail, it is now straightforward to "reverse map" from CG to atomistic descriptions, providing a strategy to assemble membrane proteins within a lipid environment, prior to all-Atom simulation. Moreover, recent developments have been made in "dual resolution" techniques, allowing different molecules in the system to be modeled with atomistic or CG resolution simultaneously. {\textcopyright} Springer Science+Business Media New York 2013.},
 author = {Khalid, Syma and Bond, Peter J.},
@@ -6704,6 +6870,23 @@ title = {{In situ measurement of the electrical potential across the lysosomal m
 url = {http://www.ncbi.nlm.nih.gov/pubmed/21554506},
 volume = {12},
 year = {2011}
+}
+@article{Worley1994,
+abstract = {Glucose stimulation of islet beta-cell insulin secretion is initiated by membrane depolarization and an elevation in intracellular free calcium concentration ([Ca2+]i) from a combination of influx through depolarization-activated Ca2+ channels and intracellular Ca2+ store release. Prevention of Ca2+ store refilling with thapsigargin produced a sustained depolarization, leading to enhanced Ca2+ influx and an elevation in [Ca2+]i in 12 mM glucose. Depletion of intracellular Ca2+ stores by external EGTA reduced [Ca2+]i and also caused a long-lasting depolarization. In single beta-cells, external EGTA activated an inward current, the voltage range and kinetic properties of which differed from those of voltage-dependent Ca2+ channels. A novel pathway thus exists in beta-cells by which depletion of endoplasmic reticulum Ca2+ stores results in the activation of an inward current that, by inducing depolarization, facilitates Ca2+ influx through voltage-gated Ca2+ channels. The physiological relevance of this pathway in the control of beta-cell function is indicated by the stimulation of insulin secretion by thapsigargin.},
+author = {Worley, Jennings F. and McIntyre, Margaret S. and Spencer, Ben and Mertz, Robert J. and Roe, Michael W. and Dukes, Iain D.},
+file = {::},
+isbn = {0021-9258 (Print)$\backslash$n0021-9258 (Linking)},
+issn = {00219258},
+journal = {Journal of Biological Chemistry},
+month = {may},
+number = {20},
+pages = {14359--14362},
+pmid = {8182038},
+publisher = {American Society for Biochemistry and Molecular Biology},
+title = {{Endoplasmic reticulum calcium store regulates membrane potential in mouse islet $\beta$-cells}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/8182038},
+volume = {269},
+year = {1994}
 }
 @article{Saroff2007,
 abstract = {Analyses of the binding of oxygen to monomers such as myoglobin employ the Mass Action equation. The Mass Action equation, as such, is not directly applicable for the analysis of the binding of oxygen to oligomers such as hemoglobin. When the binding of oxygen to hemoglobin is analyzed, models incorporating extensions of mass action are employed. Oxidation-reduction reactions of the heme group in myoglobin and hemoglobin involve the binding and dissociation of electrons. This reaction is described with the Nernst equation. The Nernst equation is applicable only to a monomeric species even if the number of electrons involved is greater than unity. To analyze the oxidation-reduction reaction in a molecule such as hemoglobin a model is required which incorporates extensions of the Nernst equation. This communication develops models employing the Nernst equation for oxidation-reduction reactions analogous to those employed for hemoglobin in the analysis of the oxygenation (binding of oxygen) reaction.},
