abstract for TAs drafted

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -3,6 +3,16 @@
 
 \section{Abstract}
 
+\gls{ta} proteins are a functionally diverse group of post translationally inserted membrane proteins.
+It is thought that the \gls{tmh} of the \gls{ta} protein contains sufficient information for subcellular targetting.
+Here, we built datasets based on sequence definitions of plausible \gls{ta} proteins using the Uniprot database.
+We show that any statistical differences between the hydrophobicity of the \gls{tmh} between \gls{ta} proteins belonging to mammalian, plant, or yeast organsisms are unobservably small.
+Yet, hydrophobicity of gls{tmh}s from different subcellular locations is, on average, different between the mitochondria and other membranes along the secretory pathway.
+Notably, in the case of mitochondria, this appears to be a difference in the hydrophobic residue preference of alanine rather than leucine or isoleucine rather than an increase of intramembrane polar residues.
+Whereas in the \gls{er}, Golgi, and \gls{pm} there are positively charged residues inside, and negatively charged residues outside the cytoplasm, we identify a charge skew reversal of the positive inside and negative outside rules in the mitochondrial \gls{ta} proteins.
+Whether these adaptaions are the result of membrane environment adaptations or biological features useful for the biogenesis and accurate localisation of the protein remains unclear.
+Structural modelling of the spontaneously inserting \gls{tmh}s of PTP1b and cytochrome b5 reveal that \gls{ta} proteins may gain their ability to integrate into the membrane unaided due to a strip of conserved relatively polar residues and strong flanking charge that would allow effective membrane coupling.
+
 \section{Introduction}
 
 \gls{ta} proteins are defined by their single carboxy-terminal~\gls{tmh} with a cytosolic facing amino-terminus and are a topologically distinct class of intracellular proteins.
